# typechange-bot

./: .dir-locals.el  .gitignore  .gitmodules  README.md  env.template  flake.nix  manage.py  pyproject.toml  requirements.txt  template-typechangebot-worker.service  test-annotation.py  typechange-worker.service  venv-wrap.sh
analysis/: analysis.py
flow/: .gitignore  flow.md  flow.tex  questionnaires.tex
pages/: consent-document.md
survey/: admin.py  ast_diff.py  detect_type_changes.py  models.py  periodic_tasks.py  project_mining_utils.py  tasks.py  urls.py  utils.py  views.py
survey/migrations/: 0001_initial.py  0002_commit_is_relevant.py  0003_project_installation_id.py  0004_alter_project_installation_id.py  0005_remove_committer_initial_survey_response_and_more.py  0006_alter_response_committer.py  0007_project_committers.py  0008_committer_projects.py  0009_projectcommitter_initial_commit.py  0010_project_primary_language_project_track_changes_and_more.py  0011_commit_author_commit_committer.py  0012_commit_unique_commit_hash_in_project.py  0013_alter_project_track_changes.py  0014_code.py  0015_projectcommitter_response_tags.py  0016_response_tags.py  0017_code_responses.py  0018_remove_code_responses.py  0019_rename_code_changereason.py  0020_remove_projectcommitter_initial_survey_response_and_more.py  0021_project_repository_host_and_more.py  0022_alter_project_typechecker_files.py  0023_alter_project_typechecker_files.py  0024_committer_removal.py  0025_faq.py  0026_node_alter_faq_weight_node_unique_node_names_and_more.py  0027_data_repository_host_to_node.py  0028_remove_project_repository_host.py  0029_alter_faq_question.py  (+51 more)
templates/: acknowledgment-optout.md  acknowledgment.md  footer.md  informed-consent-message.md  initial-survey.md  maintainer-initial-survey.md  survey.md
typechangesapp/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+84 files in other folders)
